--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ aiosignal==1.3.2
 aiosqlite==0.21.0
 altair==5.5.0
 annotated-types==0.7.0
-anthropic==0.50.0
+# anthropic==0.50.0
 anyio==4.9.0
 argcomplete==3.6.2
 asgiref==3.8.1
@@ -91,12 +91,13 @@ more-itertools==10.7.0
 mpmath==1.3.0
 multidict==6.4.3
 narwhals==1.37.1
+nest_asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.5
 oauthlib==3.2.2
 onnxruntime==1.21.1
-openai==1.76.2
+# openai==1.76.2
 opentelemetry-api==1.32.1
 opentelemetry-exporter-otlp-proto-common==1.32.1
 opentelemetry-exporter-otlp-proto-grpc==1.32.1
