feat: add OpenRouter integration and switch default model to Mistral

--- a/.env_template
+++ b/.env_template
@@ -1,5 +1,6 @@
 # Required: Google API key for Gemini 2 Flash model
 GOOGLE_API_KEY=your_google_api_key_here
+OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # Optional: LiteLLM master key for API authentication (if needed)
 # LITELLM_MASTER_KEY=your_litellm_master_key_here
