--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     environment:
       - PORT=4000
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-      - DEFAULT_MODEL=gemini-2.0-flash
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - DEFAULT_MODEL=mistralai/devstral-small-2505:free
       - LITELLM_LOG_LEVEL=info  # Changed from debug to reduce log volume
     volumes:
       - ./litellm_config.yaml:/app/config/config.yaml
@@ -39,8 +40,9 @@ services:
     environment:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - GEMINI_API_KEY=${GOOGLE_API_KEY}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - LITELLM_API_BASE=http://litellm:4000
-      - MODEL_NAME=gemini-2.0-flash
+      - MODEL_NAME=${MODEL_NAME:-mistral/devstral-small}
       - DB_DIR=/app/chroma_db
       - EMBEDDING_MODEL=all-MiniLM-L6-v2
     volumes:
@@ -75,7 +77,8 @@ services:
     environment:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - GEMINI_API_KEY=${GOOGLE_API_KEY}
-      - MODEL_NAME=${MODEL_NAME:-gemini-2.0-flash}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - MODEL_NAME=${MODEL_NAME:-mistral/devstral-small}
       - LITELLM_API_BASE=http://litellm:4000
       - RAG_SERVICE_URL=http://rag-service:8000
     depends_on:
@@ -103,7 +106,8 @@ services:
     environment:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - GEMINI_API_KEY=${GOOGLE_API_KEY}
-      - MODEL_NAME=${MODEL_NAME:-gemini-2.0-flash}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - MODEL_NAME=${MODEL_NAME:-mistral/devstral-small}
       - LITELLM_API_BASE=http://litellm:4000
       - RAG_SERVICE_URL=http://rag-service:8000
       # Playwright specific environment variables
